# roborace_2022

./: Cargo.toml  build_ev3.sh  build_pc.sh
.cargo/: config.toml
assets/: world.png~
src/: image.rs  imagehelper.rs  main.rs
src/roboter/: erkennung.rs  linienfolger.rs  mod.rs  screen.rs
src/test/: gui.rs  load_image.rs  mod.rs  virt_info.rs  virtual_robot.rs
