[package]
name = "linienfolger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ev3dev-lang-rust = { version = "0.12.1", features = ["screen"] }
ev3dev-lang-rust-derive = "0.10.0"
libc = "0.2"
framebuffer = { version = "0.3", optional = true }
image = { version = "0.24", optional = true }
speedy2d = { version = "1.8.0", optional = true }
imageproc = "0.23.0"

[features]
default = ["screen"]
pc_test = ["speedy2d"]
screen = ["framebuffer", "image"]
